Home HTML and CSS files seperated, FAQ UI bug fixed

--- a/erasmus/src/erasmus/accounts/templates/accounts/navbar.html
+++ b/erasmus/src/erasmus/accounts/templates/accounts/navbar.html
@@ -47,7 +47,7 @@
             <div class="profile">
                 <div class="profile_text">
                     <p>{{user.username}}</p>
-                    <p class="mail">{{user.email}}</p>
+                    <p>{{user.email}}</p>
                 </div>
                 <li><a href="#"><i class="fas fa-user"></i>Profile</a></li>
                 <ul class="profile_settings">
