--- a/erasmus/src/erasmus/courses/templates/courses/courses.html
+++ b/erasmus/src/erasmus/courses/templates/courses/courses.html
@@ -11,11 +11,11 @@
                 <thead>
                 <tr>
                     <th style="width:65px">Count</th>
-                    <th style="width:350px">Course Name</th>
-                    <th style="width:200px">Course ID</th>
-                    <th style="width:150px">ECTS Credits</th>
-                    <th style="width:370px">Taken Instead Of</th>
-                    <th style="width:370px">Remove</th>
+                    <th >Course Code</th>
+                    <th >Course Name</th>
+                    <th>ECTS Credits</th>
+                    <th >Taken Instead Of</th>
+                    <th >Remove</th>
                 </tr>
                 </thead>
                 <tbody>
