--- a/erasmus/src/erasmus/accounts/templates/accounts/navbar.html
+++ b/erasmus/src/erasmus/accounts/templates/accounts/navbar.html
@@ -28,12 +28,13 @@
             {%endif%}
             {% if not user_type == "Student" %}
             <li id="4-holder"><a id="4" href="../../courses" onclick="clicked(this)"><i class="fas fa-address-card"></i>Student List</a></li>
+            <li id="5-holder"><a id="5" href="#" onclick="clicked(this)"><i class="fas fa-address-card"></i>Waiting Approvals</a></li>
             {%endif%}
 
-            <li id="5-holder"><a id="5" href="../../documents" onclick="clicked(this)"><i class="fas fa-project-diagram"></i>Files</a></li>
-            <li id="6-holder"><a id="6" href="#" onclick="clicked(this)"><i class="fas fa-address-book"></i>Messages</a></li>
-            <li id="7-holder"><a id="7" href="#" onclick="clicked(this)"><i class="fas fa-map-pin"></i>Forum</a></li>
-			<li id="8-holder"><a id="8" href="../../faq" onclick="clicked(this)"><i class="fas fa-question-circle"></i>FAQ</a></li>
+            <li id="6-holder"><a id="7" href="../../documents" onclick="clicked(this)"><i class="fas fa-project-diagram"></i>Files</a></li>
+            <li id="7-holder"><a id="8" href="#" onclick="clicked(this)"><i class="fas fa-address-book"></i>Messages</a></li>
+            <li id="8-holder"><a id="9" href="#" onclick="clicked(this)"><i class="fas fa-map-pin"></i>Forum</a></li>
+			<li id="9-holder"><a id="10" href="../../faq" onclick="clicked(this)"><i class="fas fa-question-circle"></i>FAQ</a></li>
         </ul>
         {% endblock %}
     </div>
@@ -51,10 +52,10 @@
                 </div>
                 <li><a href="#"><i class="fas fa-user"></i>Profile</a></li>
                 <ul class="profile_settings">
-                    <li id="9-holder"><a id="9" href="#"><i class="fas fa-pen"></i>Change Password</a></li>
-                    <li id="10-holder"><a id="10" href="#"><i class="fas fa-inbox"></i>Change Mail</a></li>
-                    <li id="11-holder"><a id="11" href="#"><i class="fas fa-info-circle"></i>Preferences</a></li>
-                    <li id="12-holder"><a id="12" href="{% url 'logout' %}"><i class="fas fa-times"></i>Log Out</a></li>
+                    <li id="11-holder"><a id="11" href="#"><i class="fas fa-pen"></i>Change Password</a></li>
+                    <li id="12-holder"><a id="12" href="#"><i class="fas fa-inbox"></i>Change Mail</a></li>
+                    <li id="13-holder"><a id="13" href="#"><i class="fas fa-info-circle"></i>Preferences</a></li>
+                    <li id="14-holder"><a id="14" href="{% url 'logout' %}"><i class="fas fa-times"></i>Log Out</a></li>
                 </ul>
             </div>
         </div>
