Create Document fixed
Install python-docx as well!

--- a/erasmus/src/erasmus/courses/templates/courses/courses.html
+++ b/erasmus/src/erasmus/courses/templates/courses/courses.html
@@ -48,7 +48,8 @@
         <div class="buttons">
             <button type="button" onclick="toggleButtons(this, 3)" id="1">Add Previously Added Course</button>
             <button type="button" onclick="location.href = '../../add-unapproved-course/'" id="2">Add New Course</button>
-            <button type="button" onclick="toggleButtons(this, 3)" id="3">Merge Courses</button>
+            <!-- <button type="button" onclick="toggleButtons(this, 3)" id="3">Merge Courses</button> -->
+            <button type="button" onclick="location.href = '../../create-document/'" id="3">Create Document</button>
         </div>
 
         <td hidden="hidden" id="toggle-element-1">
