--- a/erasmus/src/erasmus/accounts/templates/accounts/navbar.html
+++ b/erasmus/src/erasmus/accounts/templates/accounts/navbar.html
@@ -13,6 +13,7 @@
 
 	<script src="https://kit.fontawesome.com/b99e675b6e.js"></script>
     <script src="../../static/manage.js"></script>
+    <script src="https://www.kryogenix.org/code/browser/sorttable/sorttable.js"></script>
 </head>
 
 <body>
